fix spacing

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-footer-stanardised/ec-component-footer-standardised.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-footer-stanardised/ec-component-footer-standardised.scss
@@ -164,10 +164,8 @@
     padding-top: $ecl-spacing-m;
   }
 
-  .ecl-footer-standardised__section8 {
-    margin-top: $ecl-spacing-m;
-  }
-
+  .ecl-footer-standardised__section7,
+  .ecl-footer-standardised__section8,
   .ecl-footer-standardised__section9 {
     margin-top: $ecl-spacing-m;
   }
@@ -178,6 +176,10 @@
     .ecl-footer-standardised__container {
       column-gap: $column-gap;
       display: grid;
+      -ms-grid-columns: 1fr $column-gap 1fr $column-gap 1fr;
+      -ms-grid-rows: minmax(min-content, max-content)
+        minmax(min-content, max-content) minmax(min-content, max-content)
+        minmax(min-content, max-content);
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(4, minmax(min-content, max-content));
       row-gap: 0;
@@ -185,40 +187,60 @@
 
     .ecl-footer-standardised__section1 {
       grid-area: 1 / 1 / 3 / 2;
+      -ms-grid-column: 1;
+      -ms-grid-row: 1;
+      -ms-grid-row-span: 2;
     }
 
     .ecl-footer-standardised__section2 {
       grid-area: 1 / 2 / 2 / 3;
+      -ms-grid-column: 3;
+      -ms-grid-row: 1;
     }
 
     .ecl-footer-standardised__section3 {
       grid-area: 1 / 3 / 2 / 4;
+      -ms-grid-column: 5;
+      -ms-grid-row: 1;
     }
 
     .ecl-footer-standardised__section4 {
       grid-area: 2 / 2 / 3 / 3;
+      -ms-grid-column: 3;
+      -ms-grid-row: 2;
     }
 
     .ecl-footer-standardised__section5 {
       grid-area: 2 / 3 / 3 / 4;
+      -ms-grid-column: 5;
+      -ms-grid-row: 2;
     }
 
     .ecl-footer-standardised__section6 {
       border-bottom-width: 2px;
       border-top-width: 2px;
       grid-area: 3 / 1 / 4 / 4;
+      -ms-grid-column: 1;
+      -ms-grid-column-span: 5;
+      -ms-grid-row: 3;
     }
 
     .ecl-footer-standardised__section7 {
       grid-area: 4 / 1 / 5 / 2;
+      -ms-grid-column: 1;
+      -ms-grid-row: 4;
     }
 
     .ecl-footer-standardised__section8 {
       grid-area: 4 / 2 / 5 / 3;
+      -ms-grid-column: 3;
+      -ms-grid-row: 4;
     }
 
     .ecl-footer-standardised__section9 {
       grid-area: 4 / 3 / 5 / 4;
+      -ms-grid-column: 5;
+      -ms-grid-row: 4;
     }
   }
 }
